[gd_scene load_steps=7 format=3 uid="uid://clo1morxtewnf"]

[ext_resource type="Script" path="res://actors/actor.gd" id="1_76cet"]
[ext_resource type="PackedScene" uid="uid://bx4t1q4tl34yf" path="res://assets/wolf.blend" id="2_67304"]
[ext_resource type="Script" path="res://actors/card_player_component.gd" id="3_2adwi"]
[ext_resource type="Script" path="res://actors/health_component.gd" id="4_hcygx"]
[ext_resource type="Script" path="res://actors/inventory_component.gd" id="5_udsbm"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1o36k"]
radius = 0.156392
height = 0.733536

[node name="Actor" type="Node3D" node_paths=PackedStringArray("card_player_component", "health_component", "inventory_component")]
script = ExtResource("1_76cet")
mesh_path = "Model/Cube"
card_player_component = NodePath("CardPlayerComponent")
health_component = NodePath("HealthComponent")
inventory_component = NodePath("InventoryComponent")

[node name="Model" parent="." instance=ExtResource("2_67304")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)

[node name="CardPlayerComponent" type="Node" parent="."]
script = ExtResource("3_2adwi")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_hcygx")

[node name="InventoryComponent" type="Node" parent="."]
script = ExtResource("5_udsbm")

[node name="CollisionArea" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="CollisionArea"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.0197379, 0.344457, 0)
shape = SubResource("CapsuleShape3D_1o36k")
